# pytest-serverless

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  README.md  conftest.py  pyproject.toml  pytest_serverless.py  serverless.yml  test_pytest_serverless.py
.github/workflows/: master.yml  pr.yml
