[tool.poetry]
name = "pytest-serverless"
version = "0.13.0"
description = "Automatically mocks resources from serverless.yml in pytest using moto."
authors = ["Daniel Ancuta <whisller@gmail.com>"]
readme = "README.md"
include = ["LICENCE", "README.md"]
homepage = "https://github.com/whisller/pytest-serverless"
repository = "https://github.com/whisller/pytest-serverless"
license="MIT"
keywords=["pytest", "serverless", "moto", "boto3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit"
]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.1"
moto = "^1.3"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.plugins."pytest11"]
"serverless" = "pytest_serverless"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
