[tool.poetry]
name = "pytest-serverless"
version = "1.0.0"
description = "Automatically mocks resources from serverless.yml in pytest using moto."
authors = ["Daniel Ancuta <whisller@gmail.com>"]
readme = "README.md"
include = ["LICENCE", "README.md"]
homepage = "https://github.com/whisller/pytest-serverless"
repository = "https://github.com/whisller/pytest-serverless"
license="MIT"
keywords=["pytest", "serverless", "moto", "boto3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit"
]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
moto = "^3.1"
boto3 = "^1.22"

[tool.poetry.dev-dependencies]
black = "^22.3"

[tool.poetry.plugins."pytest11"]
"serverless" = "pytest_serverless"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
